Fix hard to read page number on forums

--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,10 @@ div.jumbo {
 	color: #fff;
 }
 
+div.p-pagination a:link {
+	color: #fff;
+}
+
 h1.jumbo {
 	margin-top: 14px;
 }
